syntax = "proto3";

package librarymanagement;

service BookService {
    rpc GetBook(BookGetRequest) returns (BookGetResponse);
}

message BookGetRequest {
  int64 book_id = 1;
}

message BookResponse {
  int64 book_id = 1;
  string title = 2;
  string isbn = 3;
  string description = 4;
  int64 author_id = 5;
  string author_name = 6;
  int64 category_id = 7;
  string category_name = 8;
  string published_date = 9;
  int32 page_count = 10;
  bool is_available = 11;
}

message BookGetResponse {
  BookResponse book = 1;
}
